--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.1",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "npx ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "npx tsc",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "build": "tsc",
     "start": "node dist/index.js"
   },
   "dependencies": {
