--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
+    "version": 2,
+    "cleanUrls": true,
     "rewrites": [
+        {
+            "source": "/(css|js|img|assets|fonts)/(.*)",
+            "destination": "/$1/$2"
+        },
         {
             "source": "/(.*)",
             "destination": "/index.html"
