--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,3 @@
 SUPABASE_URL=https://glskbegsmdrylrhczpyy.supabase.co
 SUPABASE_KEY=sb_publishable_waCCK6KyQPWQlCQHpzVucQ_5ytpKQcQ
-PORT=4000
+PORT=4000OPENAI_API_KEY=sk-your-openai-api-key-here
