--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "cors": "^2.8.6",
     "dotenv": "^16.6.1",
     "express": "^4.22.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "openai": "^4.104.0"
   },
   "devDependencies": {
     "ts-node": "^10.9.2",
