--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,13 @@
 {
     "version": 2,
     "cleanUrls": true,
-    "rewrites": [
+    "routes": [
         {
-            "source": "/(css|js|img|assets|fonts)/(.*)",
-            "destination": "/$1/$2"
+            "handle": "filesystem"
         },
         {
-            "source": "/(.*)",
-            "destination": "/index.html"
+            "src": "/(.*)",
+            "dest": "/index.html"
         }
     ]
 }
