Simplify backend Vercel config

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,4 @@
 {
-    "version": 2,
     "builds": [
         {
             "src": "src/index.ts",
@@ -9,8 +8,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "src/index.ts",
-            "methods": ["GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"]
+            "dest": "src/index.ts"
         }
     ]
 }
